  support yet); this should speed up things in admin a bit where longer lists
  need to be handled
- make sure that plugins are found if no plugin status cache is set yet -
  thanks William for letting me have a look at that; b:#2634910
- add PasswordHash (http://www.openwall.com/phpass/) with a slight
  modification to allow to change the hash identifier

Release 0.9.4.2
- improve ZMAjaxController::flattenObject(); using ZMBeanUtils, correct
  handling of hasXXX() properties
- allow to ignore generic ZMObject properties in ZMBeanUtils::obj2map() by
  adding a new optional parameter
- upgrade admin to jquery 1.2.6
- extract JSON properties of products, cartItems, countries, zones into class
  properties to allow to modify them in subclasses
- remove max-width of #content div in default theme to accomodate higher
  resolutions
- change internal category cache in ZMCategories to protected to allow
  sublcasses access
- add GV FAQ; b:#2508343
- change ZMObject's bean behaviour to report undeclared class properties as
  warning
- add ZMObject::attachMethod(..) to allow dynamic method resolution/injection
- fix broken edit-new-file in static page editor; b:#2511994
- upgrade zm_openid to use version php-openid-2.1.2
- add code to ZMAjaxController to allow using method injection
- handle generic properties (ZMObject) in BeanUtils::obj2map if properties are
  explicitely set
- fix bug in generic getXXX()/setXXX() code in ZMObject
- change setting isEnableZenMagick to isEnableZMThemes to make it clearer what
  the setting actually does; also some code changes to exclude more code and
	leave admin working ;)
- code cleanup: use in_array rather than a combination of array_flip and
  array_key_exists!
- add getProductTypeIds() method to ZMCategory; f:#2522171
- allow to configure Ajax access/authentication on method level; $page format:
  [page]#[method]; for example 'ajax_catalog#getProductForId'

Release 0.9.4.1